--- a/settings.ini
+++ b/settings.ini
@@ -39,5 +39,5 @@ user = kgoodrick-rl
 
 ### Optional ###
 # requirements = fastcore pandas
-# dev_requirements = 
+dev_requirements = nbdev-mkdocs
 # console_scripts =
