--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,10 @@ build:
   os: "ubuntu-20.04"
   tools:
     python: "3.10"
+
+mkdocs:
+  configuration: mkdocs/mkdocs.yml
+
 python:
   # Install our python package before building the docs
   install:
