--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -11,8 +11,8 @@ edit_uri: ""
 
 copyright: 2023 onwards, Kyle Goodrick
 
-docs_dir: mkdocs/docs
-site_dir: mkdocs/site
+docs_dir: _docs
+site_dir: _site
 
 plugins:
 - literate-nav:
