--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -11,8 +11,8 @@ edit_uri: ""
 
 copyright: 2023 onwards, Kyle Goodrick
 
-docs_dir: _docs
-site_dir: _site
+# docs_dir: docs
+# site_dir: site
 
 plugins:
 - literate-nav:
