--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,9 @@ build:
   os: "ubuntu-20.04"
   tools:
     python: "3.10"
+  jobs:
+    post_system_dependencies:
+      - nbdev_install_quarto
 
 mkdocs:
   configuration: mkdocs/mkdocs.yml
@@ -13,3 +16,5 @@ python:
   install:
     - method: pip
       path: .
+      extra_requirements:
+      - dev
