--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,7 +5,7 @@ build:
   tools:
     python: "3.10"
   jobs:
-    post_system_dependencies:
+    pre_build:
       - nbdev_install_quarto
 
 mkdocs:
