--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,15 @@ build:
     python: "3.10"
   jobs:
     pre_build:
-      - nbdev_install_quarto
+      - curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.361/quarto-1.3.361-linux-amd64.deb -o quarto.deb
+      - dpkg -x quarto.deb .
+      - mv opt/quarto ./
+      - rmdir opt
+      - mkdir -p ~/.local/bin
+      - ln -s "$(pwd)"/quarto/bin/quarto ~/.local/bin
+      - export PATH="~/.local/bin:$PATH"
+      - quarto --version
+
 
 mkdocs:
   configuration: mkdocs/mkdocs.yml
