--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,10 +8,8 @@ build:
     pre_build:
       - curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.361/quarto-1.3.361-linux-amd64.deb -o quarto.deb
       - dpkg -x quarto.deb .
-      - mv opt/quarto ./
-      - rmdir opt
-      - mkdir -p ~/.local/bin
-      - ln -s "$(pwd)"/quarto/bin/quarto .
+      - rm quarto.deb
+      - ln -s ./opt/quarto/bin/quarto .
       - quarto --version
 
 
