--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,7 @@ build:
       - curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.361/quarto-1.3.361-linux-amd64.deb -o quarto.deb
       - dpkg -x quarto.deb .
       - rm quarto.deb
-      - ln -s "$(pwd)"/opt/quarto/bin/quarto /usr/local/bin
+      - ln -s "$(pwd)"/opt/quarto/bin/quarto /home/docs/checkouts/readthedocs.org/user_builds/buck-rl-nbdev/envs/latest/bin
       - echo $PATH
       - quarto --version
 
