--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,16 +4,22 @@ build:
   os: "ubuntu-20.04"
   tools:
     python: "3.10"
-  jobs:
-    pre_build:
-      - curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.361/quarto-1.3.361-linux-amd64.deb -o quarto.deb
-      - dpkg -x quarto.deb .
-      - rm quarto.deb
-      - ln -s "$(pwd)"/opt/quarto/bin/quarto /home/docs/checkouts/readthedocs.org/user_builds/buck-rl-nbdev/envs/latest/bin
-      - echo $PATH
-      - quarto --version
-      - mkdir docs
-      - mkdir sites
+  commands:
+    - git clone --no-single-branch --depth 50 https://github.com/kgoodrick-rl/Buck.git .
+    - git checkout --force origin/master
+    - git clean -d -f -f
+    - asdf global python 3.10.8
+    - python -mvirtualenv $READTHEDOCS_VIRTUALENV_PATH
+    - python -m pip install --upgrade --no-cache-dir pip setuptools
+    - python -m pip install --upgrade --no-cache-dir pillow mock==1.0.1 alabaster>=0.7,<0.8,!=0.7.5 commonmark==0.9.1 recommonmark==0.5.0 mkdocs<1.1
+    - python -m pip install --upgrade --upgrade-strategy eager --no-cache-dir .[dev]
+    - curl -L https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.361/quarto-1.3.361-linux-amd64.deb -o quarto.deb
+    - dpkg -x quarto.deb .
+    - rm quarto.deb
+    - ln -s "$(pwd)"/opt/quarto/bin/quarto /home/docs/checkouts/readthedocs.org/user_builds/buck-rl-nbdev/envs/latest/bin
+    - nbdev_mkdocs prepare
+    - mkdir -p $READTHEDOCS_OUTPUT/html/
+    - cp -a --verbose mkdocs/site/. $READTHEDOCS_OUTPUT/html/
 
 
 mkdocs:
